# main

./: .gitignore  README.md  docker-compose.yml  package-lock.json  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c6a10757ed2c_create_initial_tables.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/routes/: targets.py
backend/app/core/: constants.py  database.py
backend/app/models/: cve_catalog.py  scan_results.py  scan_targets.py  tech_stack.py
backend/app/repositories/: cve_repository.py  result_repository.py  target_repository.py
backend/app/scanner/: engine.py  matcher.py
backend/app/schemas/: result.py  target.py
backend/app/seeds/: cve_seed.json  load_cve_seed.py
backend/app/services/: __init__.py  orchestrator.py  registry.py  reporter.py  result_service.py  runner.py  scan_service.py  target_service.py
backend/pocs/: metadata.yaml
backend/pocs/endpoints/authentiaction_failures/: metadata.yaml  missing_auth_on_protected_endpoint.py  no_login_rate_limit.py
backend/pocs/endpoints/broken_access_control/: metadata.yaml
backend/pocs/endpoints/information_disclosure/: metadata.yaml  (+3 more)
backend/pocs/nginx_header_version_probe/: metadata.yaml  runner.py
backend/pocs/react_next_test/: metadata.yaml  runner.py
backend/pocs/springboot_actuator_exposure/: metadata.yaml  runner.py
backend/templates/: report.html
backend/tests/: test_backend_cleanup.py
(+54 files in other folders)
